--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Vai ser uma imagem aqui</h1>
-    <ul>
-        <li>Produtos</li>
-        <li>Suporte</li>
-        <li>Sobre nos</li>
+    <header class="cabecalho">
+       <img class="cabecalho-imagem" src="logosoccerbr.png" alt="logo soccer">
+    <ul class="cabecalho-lista">
+        <li class="cabecalho-lista-item">Produtos</li>
+        <li class="cabecalho-lista-item">Suporte</li>
+        <li class="cabecalho-lista-item">Sobre nos</li>
     </ul>
     </header>
-    
+
 </body>
+<header class="cabecalho2">
+    <li class="cabecalho-lista-principal">Soccer</li>
+</header>
 </html>
