--- a/index.html
+++ b/index.html
@@ -9,16 +9,10 @@
 </head>
 <body>
     <header class="cabecalho">
-       <img class="cabecalho-imagem" src="logosoccerbr.png" alt="logo soccer">
-    <ul class="cabecalho-lista">
-        <li class="cabecalho-lista-item">Produtos</li>
-        <li class="cabecalho-lista-item">Suporte</li>
-        <li class="cabecalho-lista-item">Sobre nos</li>
-    </ul>
+        <img class="cabecalho-imagem" src="LOGO_BIEL-removebg-preview.png" alt="logosoccerbr">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Produtos</li>
+            <li class="cabecalho-lista-item">Suporte</li>
+            <li class="cabecalho-lista-item">Sobre nos</li>
+        </ul>
     </header>
-
-</body>
-<header class="cabecalho2">
-    <li class="cabecalho-lista-principal">Soccer</li>
-</header>
-</html>
