--- a/index.html
+++ b/index.html
@@ -6,13 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="LOGO_BIEL-removebg-preview.png" alt="logosoccerbr">
+        <img class="cabecalho-imagem" src="LOGOFOOT.png" alt="logo foot">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Produtos</li>
             <li class="cabecalho-lista-item">Suporte</li>
             <li class="cabecalho-lista-item">Sobre nos</li>
         </ul>
     </header>
+    <section class="Destaque">
+            <div class="destaque-div-conteudo">
+                <h2 class="destaque-titulo">Destaque</h2>
+            </div>
+    </section>
