--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="LOGOFOOT.png" alt="logo foot">
+        <img class="cabecalho-imagem" src="LOGO_BIEL-removebg-preview.png" alt="logo foot">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Produtos</li>
             <li class="cabecalho-lista-item">Suporte</li>
@@ -24,3 +24,7 @@
                 <h2 class="destaque-titulo">Destaque</h2>
             </div>
     </section>
+    <header class="produtos">
+    <img class="item1-imagem" src="Design_sem_nome-removebg-preview (1).png" alt="meia soccer">
+    <header class="produto2">
+        <img class="item2-imagem" src="Design_sem_nome-removebg-preview.png" alt="chuteirra soccer">  
